# puzzlebot_core

./: .gitignore  README.md
puzzlebot_bringup/: CMakeLists.txt  package.xml
puzzlebot_bringup/launch/: rviz2.launch.py  state_publisher.launch.py
puzzlebot_description/: CMakeLists.txt  package.xml
puzzlebot_description/hooks/: puzzlebot_description.dsv.in
puzzlebot_description/media/media/materials/scripts/: puzzlebot.material
puzzlebot_description/meshes/: LICENSE  camera.dae  caster_wheel_support.dae  lidar.dae  wheel.dae
puzzlebot_description/meshes/chassis/: chassis.dae  complete_chassis.dae
puzzlebot_description/rviz/: drive.rviz  perception.rviz  vision.rviz
puzzlebot_description/urdf/: puzzlebot.urdf.xacro
puzzlebot_description/urdf/xacros/: chassis.xacro  gazebo_plugins.xacro  geometric_primitives.xacro  wheels.xacro
